@@ -1,5 +1,7 @@
 # To be released:
 
+- Add autocomplete filter
+
 # 1.16.4 - Monday 5th of October 2020
 
 - Add `attachment.upload` and `attachment.uploadState` fields for livedata upload status. These fields are currently unused if you only use the low level client.
